Finished adding CSS to h1

--- a/Projects/Dasmoto's Arts & Crafts/Resource/CSS/index.css
+++ b/Projects/Dasmoto's Arts & Crafts/Resource/CSS/index.css
@@ -1,4 +1,7 @@
 h1{
-    font-size: large;
-    color: #00CC22;
+    font-family: Helvetica;
+    font-weight: bold;
+    font-size: 100px;
+    color: khaki;
+    text-align: center;
 }
