Adding background image to the top line

--- a/Projects/Dasmoto's Arts & Crafts/Resource/CSS/Arts.css
+++ b/Projects/Dasmoto's Arts & Crafts/Resource/CSS/Arts.css
@@ -5,3 +5,7 @@ h1{
     color: khaki;
     text-align: center;
 }
+
+title{
+    background-image: url(".https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg");
+}
