--- a/Projects/Dasmoto's Arts & Crafts/Resource/CSS/Arts.css
+++ b/Projects/Dasmoto's Arts & Crafts/Resource/CSS/Arts.css
@@ -1,11 +1,12 @@
-h1{
+title{
     font-family: Helvetica;
     font-weight: bold;
     font-size: 100px;
     color: khaki;
     text-align: center;
+    background-image: url(".https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg");
 }
 
-title{
-    background-image: url(".https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg");
+Foo{
+    color:aqua
 }
