--- a/Projects/Dasmoto's Arts & Crafts/Resource/CSS/Arts.css
+++ b/Projects/Dasmoto's Arts & Crafts/Resource/CSS/Arts.css
@@ -7,6 +7,6 @@ h1{
     background-image: url(".https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg");
 }
 
-Foo{
+.Foo{
     color:aqua
 }
