--- a/Projects/Dasmoto's Arts & Crafts/Resource/CSS/Arts.css
+++ b/Projects/Dasmoto's Arts & Crafts/Resource/CSS/Arts.css
@@ -1,3 +1,10 @@
+.sub-title{
+    font-family: Helvetica;
+    font-size: 32px;
+    font-weight: bold;
+    color: white;
+}
+
 #title{
     font-family: Helvetica;
     font-weight: bold;
@@ -7,4 +14,14 @@
     background-image: url("https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg");
 }
 
+#Brushes{
+    background-color: mediumspringgreen;
+}
 
+#frames{
+    background-color: lightcoral;
+}
+
+#paint{
+    background-color:skyblue;
+}
