--- a/Projects/Dasmoto's Arts & Crafts/Resource/CSS/Arts.css
+++ b/Projects/Dasmoto's Arts & Crafts/Resource/CSS/Arts.css
@@ -5,6 +5,12 @@
     color: white;
 }
 
+.price{
+    font-family: Helvetica;
+    font-weight: bold;
+    color: blue;
+}
+
 #title{
     font-family: Helvetica;
     font-weight: bold;
